ignore vscode stuff

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ playbook4/playbook4.dSYM/Contents/Resources/DWARF/playbook4
 playbook4/playbook4.dSYM/Contents/Resources/Relocations/x86_64/playbook4.yml
 playbook4/.DS_Store
 .DS_Store
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/settings.json
