Cleaned up pbkprojecthandler.cpp
Also edited CMakeLists.txt to reflect new file

--- a/playbook4/CMakeLists.txt
+++ b/playbook4/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(playbook4
     modules/pbkprojecthandler.cpp
     modules/playbookcore.cpp
     modules/playbookinterpreter.cpp
+    modules/pbkprojcreatorwriteout.cpp
 )
 
 # Optionally, link libraries (if needed)
