--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ playbook4/playbook4.dSYM/Contents/Resources/Relocations/x86_64/playbook4.yml
 playbook4/.DS_Store
 .DS_Store
 .vscode/
-/playbook4/build
+playbook4/build
 playbook4/.vscode/
 playbook4/debug/playbook4
 playbook4/debug/playbook4.dSYM/Contents/Info.plist
 playbook4/debug/playbook4.dSYM/Contents/Resources/DWARF/playbook4
 playbook4/debug/playbook4.dSYM/Contents/Resources/Relocations/x86_64/playbook4.yml
+playbook4/test
+playbook4/playbook4.dSYM
