Ignore build folder

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ playbook4/debug/playbook4.dSYM/Contents/Resources/DWARF/playbook4
 playbook4/debug/playbook4.dSYM/Contents/Resources/Relocations/x86_64/playbook4.yml
 playbook4/test
 playbook4/playbook4.dSYM
+/build
